Refactored Pom File  and FE part